login.logout,guestuser api functionality done

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 3000
 MONGODB_CONNECT= 'mongodb+srv://chatapp:chatapp06@cluster0.yazua.mongodb.net/chatappDB?retryWrites=true&w=majority&appName=Cluster0'
 
-
+JWT_SECRET = subscribethischannel
+SECURE = "development"
