--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
     "router": "^1.3.8",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
