--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon backend/index.js",
     "start": "node backend/index.js",
-    "build" : "npm install && npm run build --prefix frontend/vite-project"
+    "build": "npm install && npm install --prefix frontend/vite-project && npm install -g vite && npm run build --prefix frontend/vite-project"
   },
   "keywords": [],
   "author": "",
